--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
             <a href="{% url 'demos:introduce' %}">Service</a>
             <a href="{% url 'demos:home' %}">About Us</a>
             <a href="{% url 'demos:home' %}">Guide Map</a>
-            <a href="#">Q&A</a>
+            <a href="{% url 'demos:qna' %}">Q&A</a>
         </div>
         <div class="footer-bottom">
             <a href="{% url 'demos:github' %}"><i class="ri-github-fill"></i></a>
