--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -83,7 +83,7 @@
         <script>
             document.getElementById('keyword').value = localStorage.getItem('search_txt') || '';
         </script>
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{MAP_KEY}}&libraries=services"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=56608f5756c28cc1c5a7ecf37e079ecf&libraries=services"></script>
         <script>
             var markers = [];
             var parkingData = [];
