--- a/templates/qanda_create.html
+++ b/templates/qanda_create.html
@@ -6,6 +6,7 @@
             <div class="qna_container">
                 <a href="{% url 'demos:qanda_list' %}"><i class="ri-close-large-line"></i></a>
             </div>
+            <div class="qna_container2">
                 <form action = "{% url 'demos:qanda_create' %}" method="post">
                 {% csrf_token %}
                 <label for="title" class="form-label">제목 : </label>
@@ -19,13 +20,14 @@
                 </div>
             </form>
         </div>
+        </div>
     </div>
     <footer>
         <div class="footer-top">
             <a href="{% url 'demos:introduce' %}">Service</a>
             <a href="{% url 'demos:home' %}">About Us</a>
             <a href="{% url 'demos:home' %}">Guide Map</a>
-            <a href="#">Q&A</a>
+            <a href="{% url 'demos:qna' %}">Q&A</a>
         </div>
         <div class="footer-bottom">
             <a href="{% url 'demos:github' %}"><i class="ri-github-fill"></i></a>
