--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -277,7 +277,6 @@ p{
     flex-direction: row;
     justify-content: start;
     align-items: center;
-    margin: 1.5rem;
 }
 .profile_name {
     display: flex;
@@ -308,12 +307,6 @@ p{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    padding: 40px 30px;
-    margin-top: 1rem;
 }
 .mypage-h1 {
     margin-top: 5rem;
@@ -490,4 +483,11 @@ h6 {
 
 ::-webkit-scrollbar-thumb:hover {
     background: rgba(0, 0, 0, 0.5);
+}
+.profile_name p{
+    margin-block: 0;
+}
+.profile_img img{
+    width: 50px;
+    height: 50px;
 }
