--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
     <div class="mypage-container">
         <div class="mypage_container">
             <div class="mypage-h1"><h1>MY PAGE</h1></div>
             <div class="profile">
-                <div class="profile_img"></div>
+                <div class="profile_img">
+                    <img src="{% static 'img/profile.png' %}">
+                </div>
                 <div class="profile_name">
-                    <p>{{ user.email}}<p>
-                    <p>ID: {{ user.username}}<p>
+                    <p>{{ user.email}}</p>
+                    <p>ID: {{ user.username}}</p>
                 </div>
             </div>
             <div class="mypage">
