--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -4,11 +4,11 @@
   margin: auto;
   display: flex;
   flex-direction: column;
+  background-color: var(--blue);
 }
 
 main {
   flex-grow: 1;
-  width: fit-content;
   height: fit-content;
 }
 
