[feat]: Celery및 CSS 수정

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -24,7 +24,7 @@ main {
 
   /* color */
   --blue:	#CEDFF1;
-  —btn: #AADBFF;
-  —white: #fff;
-  —gray: #c4c4c4;
+  --btn: #AADBFF;
+  --white: #fff;
+  --gray: #c4c4c4;
 }
