--- a/templates/home.html
+++ b/templates/home.html
@@ -20,9 +20,9 @@
             <a href="{% url 'demos:qna' %}">Q&A</a>
         </div>
         <div class="footer-bottom">
-            <a href="{% url 'demos:github' %}"><i class="ri-github-fill"></i></a>
+            <a href="https://github.com/pirogramming-project/JisungPark.git"><i class="ri-github-fill"></i></a>
             <a href="{% url 'demos:email' %}"><i class="ri-mail-line"></i></a>
-            <a href="{% url 'demos:insta' %}"><i class="ri-instagram-line"></i></a>
+            <a href="https://www.instagram.com/jissungpark_/"><i class="ri-instagram-line"></i></a>
             <a href="{% url 'demos:facebook' %}"><i class="ri-facebook-circle-fill"></i></a>
         </div>
     </footer>
