--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -2,7 +2,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 7rem;
+    height: 5dvh;
     background-color: white;
     padding: 0 1rem;
     z-index: 1000;
