css 수정사항 적용

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,8 @@
             {% block content %}
             {% endblock %}
         </main>
+        {% block footer %}
+        {% endblock %}
     </div>
     <script>
         function toggleMenu() {
