--- a/templates/home.html
+++ b/templates/home.html
@@ -11,21 +11,6 @@
             주변 주차장 찾기
         </button>        
     </div>
-
-    <footer>
-        <div class="footer-top">
-            <a href="{% url 'demos:introduce' %}">Service</a>
-            <a href="{% url 'demos:aboutus' %}">About Us</a>
-            <a href="{% url 'demos:guidemap' %}">Guide Map</a>
-            <a href="{% url 'demos:qna' %}">Q&A</a>
-        </div>
-        <div class="footer-bottom">
-            <a href="https://github.com/pirogramming-project/JisungPark.git"><i class="ri-github-fill"></i></a>
-            <a href="{% url 'demos:email' %}"><i class="ri-mail-line"></i></a>
-            <a href="https://www.instagram.com/jissungpark_/"><i class="ri-instagram-line"></i></a>
-            <a href="{% url 'demos:facebook' %}"><i class="ri-facebook-circle-fill"></i></a>
-        </div>
-    </footer>
     <script>
         function saveSearchTextAndRedirect() {
             const searchValue = document.querySelector("input[name='search_txt']").value;
@@ -49,4 +34,20 @@
             });
         });
         </script>
+{% endblock %}
+{% block footer %}
+        <footer>
+        <div class="footer-top">
+            <a href="{% url 'demos:introduce' %}">Service</a>
+            <a href="{% url 'demos:aboutus' %}">About Us</a>
+            <a href="{% url 'demos:guidemap' %}">Guide Map</a>
+            <a href="{% url 'demos:qna' %}">Q&A</a>
+        </div>
+        <div class="footer-bottom">
+            <a href="https://github.com/pirogramming-project/JisungPark.git"><i class="ri-github-fill"></i></a>
+            <a href="{% url 'demos:email' %}"><i class="ri-mail-line"></i></a>
+            <a href="https://www.instagram.com/jissungpark_/"><i class="ri-instagram-line"></i></a>
+            <a href="{% url 'demos:facebook' %}"><i class="ri-facebook-circle-fill"></i></a>
+        </div>
+    </footer>
 {% endblock %}
